--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -31,7 +31,7 @@ Before you create any contracts:
 
 </Note>
 
-2. If you're using the `@apollo/gateway` library instead of the router:
+2. If you're using the `@apollo/gateway` library instead of GraphOS Router:
 
    - For Federation 2 contract variants, update your gateway's `@apollo/gateway` library to v2.0.2 or later.
    - For Federation 1 contract variants, update your gateway's `@apollo/gateway` library to v0.34.0 or later.
