--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -32,13 +32,13 @@ You can sign up for a GraphOS Enterprise trial to test out most Enterprise featu
 
 ## Self-hosted routing
 
-With GraphOS Enterprise, you can deploy your supergraph's router instances into your own infrastructure, instead of using a GraphOS-provisioned cloud router:
+With GraphOS Enterprise, you can deploy your GraphOS Router instances in your own infrastructure instead of using a cloud GraphOS Router:
 
 ```mermaid
 flowchart LR;
   clients(Clients);
   subgraph "Your infrastructure";
-  router(["<b>Apollo<br/>Router</b>"]);
+  router(["<b>GraphOS<br/>Router</b>"]);
   subgraphA[Locations<br/>subgraph];
   subgraphB[Reviews<br/>subgraph];
   router --- subgraphA & subgraphB;
