--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -10,7 +10,7 @@ GraphOS Studio offers a performant and intuitive UI to help you monitor and unde
 
 To analyze operation metrics in GraphOS Studio, you must first report them to GraphOS. If you have a [cloud supergraph](../quickstart/cloud), its router automatically reports operation metrics.
 
-If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [connect your router to GraphOS](./sending-operation-metrics) to report metrics. The reporting mechanism is the same if you use [Apollo Server](/apollo-server/) without the the router. If you're using a third-party server, you need to [set up a reporting agent](./sending-operation-metrics#from-a-third-party-server-advanced).
+If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [connect your router to GraphOS](./sending-operation-metrics) to report metrics. The reporting mechanism is the same if you use [Apollo Server](/apollo-server/) without the router. If you're using a third-party server, you need to [set up a reporting agent](./sending-operation-metrics#from-a-third-party-server-advanced).
 
 Apollo also offers a [Datadog integration](./datadog-integration) to forward your graph's performance metrics to your Datadog account.
 
