--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sending Router Traces and Metrics to APM Tools Using OpenTelemetry
+title: Sending GraphOS Router Traces and Metrics to APM Tools Using OpenTelemetry
 subtitle: Gain insight into your graph's performance and stability
 description: Sending Apollo GraphOS Router traces and metrics to APM tools to gain insight into your graph's performance and stability.
 published: 2022-10-27
