--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -7,7 +7,7 @@ id: TN0039
 tags: [federation, gateway, router, subgraphs]
 ---
 
-As your graph grows, you may need to debug a problematic query for one reason or another. The router and `@apollo/gateway` both serve as an entry point into your federated graph and offer ways to debug requests.
+As your graph grows, you may need to debug a problematic query for one reason or another. The GraphOS Router and `@apollo/gateway` both serve as an entry point into your federated graph and offer ways to debug requests.
 
 Each client request goes through a process called [query planning](/graphos/explorer/additional-features/#query-plans-for-supergraphs) that generates the subgraph requests to execute. You can log out the query plan in both the router and gateway.
 
