--- a/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
+++ b/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
@@ -28,7 +28,7 @@ flowchart LR
 
 <Tip>
 
-The purpose of publishing your subgraph schemas to GraphOS is so that they can be composed into a Supergraph which is consumed by the router. Each Router will be configured to consume a specific variant via a fixed graph reference. As a result, it's important that graph references/variant names are fixed, such as aligning them with each environment as demonstrated in this tech note.
+The purpose of publishing your subgraph schemas to GraphOS is so that they can be composed into a supergraph which is consumed by the router. Each router will be configured to consume a specific variant via a fixed graph reference. As a result, it's important that graph references/variant names are fixed, such as aligning them with each environment as demonstrated in this tech note.
 
 </Tip>
 
