--- a/src/content/shared/pq-intro.mdx
+++ b/src/content/shared/pq-intro.mdx
@@ -1,4 +1,4 @@
-With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a _persisted query list_ (PQL) for your supergraph's self-hosted router. To create and update the PQL, first-party apps register trusted operations to the PQL at build time.
+With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a _persisted query list_ (PQL) for your GraphOS Router. To create and update the PQL, first-party apps register trusted operations to the PQL at build time.
 
 ```mermaid
 flowchart LR
