--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -35,7 +35,7 @@ Start the process by making a "federated graph of one." Your existing monolith c
      --convert # necessary if you're publishing to an existing variant
    ```
 
-1. Deploy an instance of the router to your environment.
+1. Deploy an instance of the GraphOS Router to your environment.
    <EnterpriseFeature>
 
     Self-hosting the GraphOS Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/cloud-routing). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more.
