Update GraphQL Federation

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -1,7 +1,7 @@
 ---
 title: Developer Experience
 subtitle: Boost developer velocity for graph consumers and contributors
-description: Enhance developer productivity with GraphQL Federation via streamlined workflows, effective schema management, and comprehensive onboarding.
+description: Enhance developer productivity with GraphQL federation via streamlined workflows, effective schema management, and comprehensive onboarding.
 ---
 
 The **Developer Experience** pillar focuses on enhancing developer productivity and satisfaction.
@@ -40,12 +40,12 @@ Additionally, using mocking before graph implementation and providing access to 
 
 ### Use the supergraph to improve distributed systems
 
-It's essential for any organization using GraphQL Federation to embrace best practices for microservices and distributed systems.
+It's essential for any organization using GraphQL federation to embrace best practices for microservices and distributed systems.
 These best practices include:
 
 - Documenting a framework for splitting responsibilities across subgraphs
 - Documenting best practices for entity resolvers
-- Using GraphQL Federation appropriately for cross-domain orchestration
+- Using GraphQL federation appropriately for cross-domain orchestration
 
 ### Onboard graph consumers and contributors
 
