--- a/src/content/graphos/org/sso/migration.mdx
+++ b/src/content/graphos/org/sso/migration.mdx
@@ -1,15 +1,19 @@
 ---
 title: GraphOS SSO Migration Guide
-subtitle: Learn what's changing, who needs to migrate, and how
+subtitle: Learn who needs to migrate, what's changing, and how to migrate
 noIndex: true
 ---
 
-GraphOS has implemented a new single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024. After that date, the legacy implementation will no longer work, and your organization will lose access to GraphOS.
+GraphOS has a new single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024. After that date, the legacy implementation will no longer work, and your organization will lose access to GraphOS.
 
 ## Who needs to migrate?
 
 If your organization implemented SSO before April 2024, you must migrate.
-To confirm if you need to migrate, visit [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and check for an SSO migration banner. If you aren't sure whether you need to migrate, please reach out to your Apollo contact.
+To confirm if you need to migrate, visit [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and check for an SSO migration banner.
+
+[To-do: Banner screenshot]
+
+If you aren't sure whether you need to migrate, please reach out to your Apollo contact.
 
 ## What's changing?
 
@@ -17,7 +21,7 @@ The new SSO implementation is now directly integrated into the GraphOS authentic
 
 ## How to migrate
 
-To migrate, a GraphOS [Org Admin](../members/#organization-wide-member-roles) must create a new SSO configuration and remove the legacy configuration. For details, see the dedicated instructions for your identity provider:
+To migrate, a GraphOS [Org Admin](../members/#organization-wide-member-roles) must create a new SSO configuration and remove the legacy configuration. For details, see the instructions for your identity provider:
 
 - [Okta (SAML-based)](./okta-integration-guide/)
 - Microsoft Entra ID (formerly known as Azure Active Directory)
