update @contact examples with a description of the directive

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -240,6 +240,7 @@ The contact info includes a name (of a team or individual), along with an option
 To use the `@contact` directive in your subgraph schema, you first need to define the directive in your schema. Add the following definition to each of your subgraph schemas:
 
 ```graphql title="schema.graphql"
+"Annotate a schema with contact information for the subgraph owner"
 directive @contact(
   "Contact title of the subgraph owner"
   name: String!
