Update `@contact` examples with a description of the directive (#878)

--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -665,6 +665,7 @@ This example shows correct `@contact` directive usage:
 <br/>
 
 ```graphql title="✅ schema.graphql" disableCopy=true showLineNumbers=false
+"Annotate a schema with contact information for the subgraph owner"
 directive @contact(
   "Contact title of the subgraph owner"
   name: String!
