Apply suggestions from code review
Co-authored-by: Edward Huang <edward.huang@apollographql.com>

--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -19,7 +19,7 @@ flowchart LR;
   end;
 ```
 
-- The **GraphOS Router** is powered by a particular version of the Apollo Router Core.
+- The **GraphOS Router** is based on a version of the Apollo Router Core.
   - This is true for all supergraph types ([cloud](./#cloud-supergraphs) and [self-hosted](./#self-hosted-supergraphs)).
 - The **GraphOS build pipeline** uses a particular version of Apollo Federation to compose your router's supergraph schema.
   - If you use the Rover CLI to compose your supergraph schema, this is true for Rover as well. In this case, you effectively maintain your own build pipeline.
