--- a/src/content/graphos/basics/routing.mdx
+++ b/src/content/graphos/basics/routing.mdx
@@ -56,7 +56,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-Both cloud and self-hosted GraphOS Routers are powered by the Apollo Router Core—a high-performance routing runtime packaged as a [standalone binary](https://github.com/apollographql/router).
+Both cloud and self-hosted GraphOS Routers are based on the Apollo Router Core—a high-performance routing runtime packaged as a [standalone binary](https://github.com/apollographql/router).
 
 <Note>
 
@@ -122,7 +122,7 @@ GraphOS offers the following router options, in increasing order of configurabil
 
 ### GraphOS Router features
 
-Although all GraphOS Routers (both cloud- and self-hosted) are powered by the source-available Apollo Router Core binary, they offer an expanded feature set that isn't available when running the Apollo Router Core without connecting it to GraphOS.
+Although all GraphOS Routers (both cloud- and self-hosted) are based on the source-available Apollo Router Core binary, they offer an expanded feature set that isn't available when running the Apollo Router Core without connecting it to GraphOS.
 
 Cloud-hosted routers automatically have access to GraphOS Router features, while self-hosted routers must be authenticated with a GraphOS Enterprise license to gain access to these features. Refer to the [pricing page](https://www.apollographql.com/pricing#graphos-router) to compare GraphOS Router features across plan types.
 
