--- a/src/content/graphos/basics/data-privacy.mdx
+++ b/src/content/graphos/basics/data-privacy.mdx
@@ -34,7 +34,7 @@ All data sent to GraphOS is sent to an endpoint with one of the following base U
 | `https://usage-reporting.api.apollographql.com`        | Metrics reporting from the [GraphOS Router](/router/configuration/telemetry/apollo-telemetry) (v0.1.0+), [Apollo Server](./metrics/sending-operation-metrics/) (v2.18.0+), and third-party API servers                                                                            |
 | `https://rover.apollo.dev`                             | The [Rover CLI](/rover/)—all commands if [telemetry is enabled](/rover/privacy), `rover supergraph compose` when fetching new plugin versions, all `rover template` commands, and once per day to check for version updates                                                       |
 | `https://api.apollographql.com/graphql`                | All [Rover CLI](/rover/) (v0.6+) commands that communicate with GraphOS, along with all requests to the [GraphOS Platform API](./platform-api/)                                                                                                                                   |
-| `https://router.apollo.dev`                            | The GraphOS Router installer (all versions), along with Router (v1.9.0+) [telemetry when enabled](/router/privacy)                                                                                                                                                                |
+| `https://router.apollo.dev`                            | The GraphOS Router installer (all versions), along with GraphOS Router (v1.9.0+) [telemetry when enabled](/router/privacy)                                                                                                                                                                |
 | `https://uplink.api.apollographql.com`                 | GraphOS Router (v0.1.0+) with [managed federation](/federation/managed-federation/overview/) and/or [Enterprise features](/router/enterprise-features/) enabled, Apollo Server with Apollo Gateway (v0.34.0+) with [managed federation](/federation/managed-federation/overview/) |
 | `https://aws.uplink.api.apollographql.com`             | GraphOS Router (v0.1.0+) with [managed federation](/federation/managed-federation/overview/) and/or [Enterprise features](/router/enterprise-features/) enabled, Apollo Server with Apollo Gateway (v0.45.0+) with [managed federation](/federation/managed-federation/overview/) |
 | `https://persisted-queries.api.apollographql.com/`     | GraphOS Router (v1.25.0+) with [GraphOS persisted queries](./operations/persisted-queries/) enabled                                                                                                                                                                               |
@@ -218,7 +218,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-Each GraphOS Router is an instance of the Apollo Router Core running in its own managed container. These instances use the same mechanisms to report operation metrics to GraphOS as an Apollo Router Core instance running in any other environment. The only difference is that metrics reporting is always enabled for a cloud supergraph's router.
+Each instance of GraphOS Router runs in its own managed container. These instances use the same mechanisms to report operation metrics to GraphOS as a GraphOS Router or Apollo Router Core instance running in any other environment. The only difference is that metrics reporting is always enabled for a cloud supergraph's router.
 
 GraphOS Routers do not persist or log any response data returned by your subgraphs. They only assemble this data into responses for requesting clients.
 
