Callout Graph API keys remain functional

--- a/src/content/shared/sso-legacy-users.mdx
+++ b/src/content/shared/sso-legacy-users.mdx
@@ -1,1 +1,1 @@
-If team members could previously login before you implemented SSO, they must re-login to GraphOS Studio via SSO. Signing in creates a new user profile for them. Any personal API keys associated with their previous user profile will be lost. Additionally, you must reassign any [GraphOS roles](/graphos/org/members/#organization-wide-member-roles) associated with their previous user profile.
+If team members could previously login before you implemented SSO, they must re-login to GraphOS Studio via SSO. Signing in creates a new user profile for them. Any [personal API keys](/graphos/api-keys/#personal-api-keys) associated with their previous user profile will be lost. ([Graph API keys](/graphos/api-keys/#graph-api-keys) are unaffected and remain functional.) Additionally, you must reassign any [GraphOS roles](/graphos/org/members/#organization-wide-member-roles) associated with their previous user profile.
