--- a/src/content/technotes/TN0034-react-context.mdx
+++ b/src/content/technotes/TN0034-react-context.mdx
@@ -59,7 +59,7 @@ export const useQueryResult = <TData = any,>(): QueryResult<TData> => {
 In this example, we use the `QueryResultProvider` component to wrap the `Users` component, providing it with the `GET_USERS` query. The `Users` component then uses the `useQueryResult` hook to access the data, loading state, and error from the query context.
 
 ```tsx
-import { QueryProvider, useQueryData } from "./query-context";
+import { QueryResultProvider, useQueryResult } from "./query-context";
 import { gql } from "@apollo/client";
 
 const GET_USERS = gql`
