--- a/src/content/graphos/basics/data-privacy.mdx
+++ b/src/content/graphos/basics/data-privacy.mdx
@@ -131,7 +131,7 @@ The Apollo Router and Apollo Server both report a normalized string representati
 
 <Note>
 
-If you enable enhanced operation signature normalization in the router, the operation signature includes the form of the input object type, while redacting any of the actual values. [Learn more.](/router/configuration/overview#enhanced-operation-signature-normalization)
+If you enable [enhanced operation signature normalization](/router/configuration/overview#enhanced-operation-signature-normalization) in the router, the operation signature includes the form of the input object type, while redacting any of the actual values. [Learn more.](/router/configuration/overview#enhanced-operation-signature-normalization)
 
 </Note>
 
