--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -9,6 +9,8 @@ After you [enable schema checks](./schema-checks/) for your graph, you can custo
 - Exclude past operations that were executed by a particular client, such as a client that you only use for testing
 - Exclude past operations that were executed relatively infrequently
 - Check schema changes against multiple graph variants
+- Ignore changes to default values
+- Ignore potentially breaking changes when an operation check runs against zero operations
 
 ## Using GraphOS Studio (recommended)
 
@@ -23,9 +25,11 @@ In [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content), you
 ### Configuration options
 
 - **Time range**: Include all distinct operations that were executed within this range. The default value is 7 days ("Within the last week").
-- **Operation count threshold**: Exclude all operations that were executed fewer than this number of times within the specified **time range**.
-- **Variants**: Include all distinct operations that were executed against each selected variant of your graph. The default value is "Base variant" (that is, whichever variant schema checks are being run against).
-- **Client exclusions**: Exclude all operations that were executed by particular clients, such as clients used exclusively for development and testing.
+  - **Operation count threshold**: Exclude all operations that were executed fewer than this number of times within the specified **time range**.
+- **Included Variants**: Include all distinct operations that were executed against each selected variant of your graph. The default value is "Base variant" (that is, whichever variant schema checks are being run against).
+- **Excluded Clients**: Exclude all operations that were executed by particular clients, such as clients used exclusively for development and testing.
+- **Excluded Operations**: Exclude specific named operations.
+- **Ignored Conditions**: Ignore certain kinds of schema changes. [Learn more.](./schema-checks/#ignored-condition-settings)
 
 ## Using the Rover CLI
 
