--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -171,7 +171,12 @@ If a [composition check](#composition-checks) succeeds, GraphOS then validates s
 
 Occasionally, schema checks might flag a change that you know is safe. For example, you might change an input type's field from nullable to non-nullable (usually a breaking change) when you're certain that your clients never provide a null value for the field.
 
-In cases like this, you can override a flagged change in GraphOS Studio from the associated check's details page:
+You can override flagged changes on an operation-by-operation basis or update your check settings to ignore certain kinds of changes.
+
+#### Override changes per operation
+
+[**Org admins** and **Graph admins**](../org/members) can override flagged changes on an operation-by-operation basis in GraphOS Studio.
+From the associated check's details page, select the **Override** dropdown next to a flagged operation:
 
 <img
   className="screenshot"
@@ -180,18 +185,21 @@ In cases like this, you can override a flagged change in GraphOS Studio from the
   width="500"
 />
 
-<Note>
+For each operation with flagged changes, you can override those changes in the following ways:
 
-Only [**Org admins** and **Graph admins**](../org/members) can override checks.
-
-</Note>
-
-You override flagged changes on an operation-by-operation basis. For each operation with flagged changes, you can override those changes in the following ways:
-
-- **Mark the changes as safe.** In this case, schema checks will not flag these exact changes for the operation in any future execution. This effectively "approves" the changes for the operation.
+- **Mark the changes as safe**: In this case, schema checks will not flag these exact changes for the operation in any future execution. This effectively "approves" the changes for the operation.
   - If a future check detects approved changes along with new unsafe changes to the operation, the new unsafe changes will be flagged.
-- **Ignore the operation.** In this case, schema checks will completely ignore the operation when checking all changes in any future execution.
+- **Ignore the operation**: In this case, schema checks will completely ignore the operation when checking all changes in any future execution.
   - This option is useful when you know an operation originates only from clients or client versions that you don't actively support.
+
+#### Ignored condition settings
+
+You can update your check settings to ignore two kind of changes:
+
+- **Ignore breaking changes when there are no operations**: Turning this setting on ignores any potentially breaking changes when an operation check is run against zero operations.
+- **Ignore default value changes**: Turning this setting on ignores any changes to default values.
+
+You enable these settings from the **Configuration** tab of your variant's **Checks** page.
 
 ## Linter checks
 
