--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -1,10 +1,10 @@
 ---
 title: Schema Checks
-subtitle: Validate all proposed changes to your schema are safe
+subtitle: Validate proposed changes to your schema are safe
 description: Use GraphOS Schema checks to identify and validate potential breaking changes in your GraphQL schema before deployment.
 ---
 
-Certain changes to your graph's schema (such as removing a field or type) might break one of your application's clients. GraphOS schema checks help you identify breaking changes before you make them. They can also help you identify when a potentially dangerous change is in fact safe.
+Certain changes to your graph's schema (such as removing a field or type) might break one of your application's clients. GraphOS schema checks help you identify breaking changes before you make them. They can also help you identify when a potentially dangerous change is, in fact, safe.
 
 You can review the results of schema checks inside GraphOS Studio from your graph's **Checks** page, helping you make informed decisions about evolving your graph:
 
@@ -27,21 +27,21 @@ GraphOS can perform the following types of schema checks:
 
 - [Linter checks](./schema-linter/): Analyze your proposed schema changes for violations of formatting rules and other GraphQL best practices.
 
-- [Proposals checks](./schema-proposals/configuration#configure-schema-checks) (Enterprise only): Check whether your proposed schema changes have matching and approved [schema proposals](./schema-proposals).
+- [Proposal checks](./schema-proposals/configuration#configure-schema-checks) (Enterprise only): Check whether your proposed schema changes have matching and approved [schema proposals](./schema-proposals).
 
 - [Contract checks](./contract-setup/#run-contract-checks) (Enterprise only): When running schema checks on a source variant, also check whether your proposed schema changes break any downstream contract variants.
 
 Most of this article covers composition and operation checks.
 
 - For details on linter checks, see [Schema linting](./schema-linter/).
-- For details on proposals checks, see [Schema proposals check configuration](./schema-proposals/configuration#configure-schema-checks).
+- For details on proposal checks, see [Schema proposals check configuration](./schema-proposals/configuration#configure-schema-checks).
 - For details on contract checks, see [Contract checks](./contract-setup/#run-contract-checks).
 
 ## Prerequisites
 
 To enable schema checks for your supergraph, do the following if you haven't yet:
 
-1. Make sure you've published all your subgraph schemas to GraphOS, and that those schemas are up to date.
+1. Make sure you've published all your subgraph schemas to GraphOS and that those schemas are up to date.
    - [Learn how to publish schemas.](./)
 2. For operation checks, make sure your supergraph is sending operation metrics to GraphOS. GraphOS uses historical metrics to determine whether a potentially dangerous schema change is safe.
 
@@ -92,8 +92,8 @@ When you run `rover subgraph check`:
 
 1. GraphOS generates a diff between your local schema and the published schema for the variant you're checking against.
 2. GraphOS uses this diff to determine whether the changes affect any operations that have been executed against your supergraph within a [customizable time window](./check-configurations/) (by default, this is the last seven days).
-3. GraphOS returns the diff, along with a list of the operations that are affected by the changes.
-4. Rover prints the result of the check and returns a non-zero exit code if at least one breaking change is found.
+3. GraphOS returns the diff, along with a list of the operations affected by the changes.
+4. Rover prints the check result and returns a non-zero exit code if at least one breaking change is found.
 
 ### The check response
 
@@ -147,7 +147,7 @@ You can rerun checks from GraphOS Studio. Select the check and click **Rerun che
   width="300"
 />
 
-When you rerun a check, the new run uses the current [check configuration options](./check-configurations/), regardless of the configuration at the time of the original run. Similarly, the new run's time window is based on the current time, not the time when the original check ran.
+When you rerun a check, the new run uses the current [check configuration options](./check-configurations/), regardless of the configuration at the time of the original run. Similarly, the new run's time window is based on the current time, not when the original check ran.
 
 The new checks run incorporates any changes made to excluded or included clients, checked variants, and any operations marked as safe or ignored.
 
@@ -159,7 +159,7 @@ If you've [integrated schema checks with your GitHub PRs](#integrating-with-gith
 
 ## Composition checks
 
-When you run `rover subgraph check`, GraphOS performs a _composition check_ before it performs any other checks. A composition check verifies that changes you make to a subgraph schema are valid GraphQL definitions and are compatible with your other subgraph schemas, enabling them to [compose](/federation/federated-types/composition/) into a supergraph schema for your router.
+When you run `rover subgraph check`, GraphOS performs a _composition check_ before performing any other checks. A composition check verifies that changes you make to a subgraph schema are valid GraphQL definitions and are compatible with your other subgraph schemas, enabling them to [compose](/federation/federated-types/composition/) into a supergraph schema for your router.
 
 If a composition check fails, Studio does not perform additional checks for the provided schema.
 
@@ -167,7 +167,7 @@ From your graph's **Checks** page in GraphOS Studio, you can click a particular 
 
 ## Operation checks
 
-If a [composition check](#composition-checks) succeeds, GraphOS then validates schema changes with _operation checks_. Operation checks use your graph's historical client operation data to determine whether any clients would be negatively affected by the proposed schema changes. For example, if changes include removing a field that multiple clients use in their queries, an operation check would flag the change.
+If a [composition check](#composition-checks) succeeds, GraphOS then validates schema changes with _operation checks_. Operation checks use your graph's historical client operation data to determine whether any clients would be negatively affected by the proposed schema changes. For example, an operation check would flag a change that removes a field that multiple clients use in their operations.
 
 ### Overriding flagged changes
 
@@ -192,7 +192,7 @@ For each operation with flagged changes, you can override those changes in the f
 - **Mark the changes as safe**: In this case, schema checks will not flag these exact changes for the operation in any future execution. This effectively "approves" the changes for the operation.
   - If a future check detects approved changes along with new unsafe changes to the operation, the new unsafe changes will be flagged.
 - **Ignore the operation**: In this case, schema checks will completely ignore the operation when checking all changes in any future execution.
-  - This option is useful when you know an operation originates only from clients or client versions that you don't actively support.
+  - This option is useful when you know an operation originates only from clients or client versions you don't actively support.
 
 You can **Undo** an override from the banner that appears on any overridden operations.
 
