--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -189,7 +189,7 @@ From the associated check's details page, select the **Override** dropdown under
 
 For each operation with flagged changes, you can override those changes in the following ways:
 
-- **Mark the changes as safe**: In this case, schema checks will not flag these exact changes for the operation in any future execution. This effectively "approves" the changes for the operation.
+- **Mark change as safe**: In this case, schema checks will not flag these exact changes for the operation in any future execution. This effectively "approves" the changes for the operation.
   - If a future check detects approved changes along with new unsafe changes to the operation, the new unsafe changes will be flagged.
 - **Ignore the operation**: In this case, schema checks will completely ignore the operation when checking all changes in any future execution.
   - This option is useful when you know an operation originates only from clients or client versions you don't actively support.
@@ -211,7 +211,7 @@ You can update your check settings to ignore two kind of changes:
 - **Ignore default value changes**: Turning this setting on ignores any changes to default values.
 
 You enable these settings from the **Configuration** tab of your variant's **Checks** page.
-Learn about other checks settings in the [Configure Schema Checks page](./check-configurations).
+Learn about other checks settings on the [Configure Schema Checks page](./check-configurations).
 
 ## Linter checks
 
@@ -281,8 +281,9 @@ If you're using GitHub, you can install the [Apollo Studio GitHub app](https://g
 
 <img
   className="screenshot"
-  src="../img/schema-checks/github-check.jpg"
+  src="../img/schema-checks/github-check.png"
   alt="GitHub Status View"
+  width="700"
 />
 
 ### Integrating with other version control services
