--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -71,23 +71,26 @@ When **Contributor**s in an organization create a new graph, they are automatica
 | Create new variants                              |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
 | Push schemas to a graph                          |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
 | Manage Explorer settings (URL, etc)              |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
+| Report graph usage metrics <sup>1</sup>          |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
 | See the schemas of subgraphs in federated graphs |     ✓     |      ✓      |                                            ✓                                            |           ✓           |          |
-| View graph usage metrics and traces <sup>1</sup> |     ✓     |      ✓      |                                            ✓                                            |           ✓           |          |
+| View graph usage metrics and traces <sup>2</sup> |     ✓     |      ✓      |                                            ✓                                            |           ✓           |          |
 | Edit variant READMEs                             |     ✓     |      ✓      |                                            ✓                                            |    Documenter only    |          |
 | Query graphs with the Explorer                   |     ✓     |      ✓      |                                            ✓                                            |           ✓           |    ✓     |
 | View graph schemas and changelogs                |     ✓     |      ✓      |                                            ✓                                            |           ✓           |    ✓     |
 
-<blockquote>
+<Note>
 
-<sup>1</sup> Currently, graph usage metrics and traces are not displayed to <strong>
-  Consumer
-</strong>
-s via the Studio web app, but they are not blocked at the API layer. We intend to
-remove this capability from <strong>Consumer</strong>s, but for the time being
-you should understand that <strong>Consumer</strong>s are not fully prevented from
-accessing these metrics and traces.
+1. When you [report metrics from Apollo Router or Apollo Server](../metrics/sending-operation-metrics/#from-the-apollo-router-or-apollo-server)
+   you should use a graph API key. For non-protected variants, the [graph API key role](#graph-api-key-roles)
+   must be Contributor, Org Admin, or Graph Admin. For [protected variants](/graphos/graphs/management/#protected-variants-enterprise-only),
+   only Org and Graph Admin roles can report metrics.
 
-</blockquote>
+2. Currently, graph usage metrics and traces are not displayed to Consumers
+   via the Studio web app, but they are not blocked at the API layer. We intend to
+   remove this capability from Consumers, but for the time being you should understand
+   that Consumers are not fully prevented from accessing these metrics and traces.
+
+</Note>
 
 ### Schema checks permissions
 
